--- a/blogpost.html
+++ b/blogpost.html
@@ -1,11 +1,18 @@
 <html>
     <head>
-        <title>El titulod del post</title>
-        <link rel="stylesheet" href="css/estilos.css" />
+        <title>El título del post</title>
+        <link rel="stylesheet" href="css/estilos.css">
     </head>
     <body>
-        <h1>Aquí vamos a hacer un blog post</h1>
-        <p>Este es el parrafo de inicio</p>
+        <div id="container">
+            <div id="post">
+                <h1>Este es el título atractivo e
+                    interesandte del post</h1>
+                <p>Y este es el párrafo de inicio
+                    donde vamos a explicar las cosas
+                    increibles que se puede hacer
+                    con ramas</p>
+            </div>
+        </div>
     </body>
-
 </html>
