--- a/blogpost.html
+++ b/blogpost.html
@@ -6,6 +6,9 @@
     <body>
         <div id="container">
             <div id="post">
+                <div id="cabecera">
+                    Cabecera
+                </div>
                 <h1>Este es el título atractivo e
                     interesandte del post</h1>
                 <p>Y este es el párrafo de inicio
