--- a/blogpost.html
+++ b/blogpost.html
@@ -8,7 +8,7 @@
             <div id="post">
                 <div id="cabecera">
                     Hyperblog
-                    <span id="tagline">Tu blog de confianza</span>
+                    <span id="tagline">Tu blog de maestro</span>
                 </div>
                 <h1>Este es el título atractivo e
                     interesandte del post</h1>
@@ -17,6 +17,7 @@
                     increibles que se puede hacer
                     con ramas</p>
                 <p>Los blogs son la mejor forma de compartir información y tus ideas. Mucho mas que ir a conferencias o salir en Youtube. Excepto si eres un rockstar. Pero estadísticamente no lo eres.... por ahora.</p>
+                <p>Suscribete y dale like</p>
             </div>
         </div>
     </body>
